@@ -1,3 +1,8 @@
+2011-07-20  Sergio Martin <sergio.martin@artica.es>
+
+	* godmode/agentes/agent_manager.php: Fixed a not found image
+	error with the agent icons
+
 2011-07-20  Junichi Satoh  <junichi@rworks.jp>
 	
 	* extras/pandoradb_migrate_v3.2_to_v4.0.sql: Added missing ';'.
